[project]
name = "XiaoBot"
version = "0.1.0"
description = "XiaoBot"
readme = "README.md"
requires-python = ">=3.8, <4.0"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = []
plugin_dirs = ["src/plugins"]
builtin_plugins = []

[tool.pyright]
include = [
    "src",
    "tests",
    "watch"
]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "data/"
]
ignore = [
    "src/utils/render_ext/markdown/katexsvg/svgmath"
]
