[project]
name = "XiaoBot"
version = "0.1.0"
description = "XiaoBot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp",
    "async-lru",
    "cairosvg",
    "emoji",
    "fonttools",
    "ImageHash",
    "jieba",
    "lark",
    "mistletoe",
    "nb-cli>=1.7.4",
    "nonebot-adapter-onebot",
    "nonebot2[fastapi]",
    "numpy",
    "opencv-python>=4.5.4.58",
    "orjson",
    "paddlepaddle",
    "Pillow==10.4.0",
    "prometheus-client>=0.25.0",
    "psutil",
    "py-mini-racer",
    "Pygments",
    "pydantic>=2",
    "pymixbox==2.0.0",
    "pymongo>=4.13.0",
    "pyphen>=0.13.2",
    "python-dotenv",
    "pypinyin",
    "requests",
    "typing-extensions>=4.10.0",
    "watchdog",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6",
    "ruff>=0.8",
]

[tool.uv]
index-url = "https://mirrors.aliyun.com/pypi/simple/"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = []
plugin_dirs = ["src/plugins"]
builtin_plugins = []

[tool.ruff]
target-version = "py312"
line-length = 88
extend-exclude = [
    "src/utils/render_ext/markdown/components/utils/katexsvg/svgmath",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line length handled by ruff format
    "RUF001", # ambiguous unicode: bot name/docstring emoji are intentional
    "RUF002", # ambiguous unicode in docstring
    "RUF003", # comments with Chinese punctuation are intentional
    "RUF012", # mutable class-level configs/styles/wordlists are intentional
]

[tool.ruff.lint.per-file-ignores]
# NoneBot uses CommandArg()/Depends() in handler argument defaults — not a bug
"src/plugins/**.py" = ["B008"]
# Render engine: Border.zero/Space.zero/Color.of/MarkdownStyle are stateless factories
"src/utils/render*/**.py" = ["B008"]
# Scripts need sys.path/nonebot.init() before project imports
"scripts/*.py" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.pyright]
include = [
    "src",
    "tests",
    "watch"
]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "data/"
]
ignore = [
    "src/utils/render_ext/markdown/components/utils/katexsvg/svgmath"
]

[tool.pytest.ini_options]
pythonpath = [
    ".",
    "src",
]
